--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -144,7 +144,7 @@ div.row.content.no-padding, div.row.text-content.no-padding {
 }
 
 #mid-container .row.content {
-  background: #ccc;
+  background: #b5cfe0;
 }
 
 #mid-container .row.text-content {
@@ -167,10 +167,12 @@ div.news ul {
 
 div.news ul li {
   padding: 14px;
+  
 }
 
 div.news ul li a {
   color: #333;
+  font-size: 12px;
 }
 
 div.news ul li + li {
@@ -181,6 +183,7 @@ div.news ul li h5 {
   margin: 0px;
   color: #222;
   font-weight: bold;
+  font-size: 12px;
 }
 
   /* Social Networks */
@@ -189,6 +192,7 @@ div.news div.social-networks {
     padding-top: 10px;
     margin-bottom: 0px;
     background: #efeff1;
+    border-bottom: 1px solid #bbb;
     padding: 8px;
   }
 
@@ -220,7 +224,7 @@ div.news div.fb {
 div.featured-content {
   background: #fdfdfe;
   padding: 0;
-  border-bottom: 2px solid #aaa;
+  border-bottom: 2px solid #999;
   overflow: auto;
 }
 
@@ -255,7 +259,7 @@ div.featured-filmmaker .featured-image {
 div.featured-filmmaker .featured-text {
   padding: 6px;
   background: #fdfdfe;
-  border-bottom: 2px solid #aaa;
+  border-bottom: 2px solid #999;
 }
 
 div.featured-filmmaker .featured-text a {
@@ -342,10 +346,12 @@ div.row.footer + div.row.footer {
 
   #lower-container .colophon {
     margin: 10px 0;
+    font-size: 12px;
   }
 
   #lower-container .colophon a {
     color: #333;
+    font-size: 12px;
   }
 
   #lower-container .colophon span.plumi-logo {
@@ -391,10 +397,10 @@ p a, p a:visited { line-height: inherit; }
 #map_canvas object { max-width: none; }
 
 .shade {
-  -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.18);
-  -ms-box-shadow: 0 2px 4px rgba(0,0,0,0.18);
-  -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.18);
-  box-shadow: 0 2px 4px rgba(0,0,0,0.18);
+  -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.21);
+  -ms-box-shadow: 0 2px 4px rgba(0,0,0,0.21);
+  -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.21);
+  box-shadow: 0 2px 4px rgba(0,0,0,0.21);
 
 }
 
@@ -491,15 +497,15 @@ div.column-title h4, div.row-title h4 {
 
 div.column-title .column-title-icon {
   float: left;
-  width: 34px;
+  width: 14px;
   height: 34px;
   background: #f54422;
-  background: -moz-linear-gradient(top,#099 0,#088 100%);
-  background: -ms-linear-gradient(top,#099 0,#088 100%);
-  background: -o-linear-gradient(top,#099 0,#088 100%);
-  background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#099),color-stop(100%,#088));
-  background: -webkit-linear-gradient(top,#099 0,#088 100%);
-  background: linear-gradient(to bottom,#099 0,#088 100%);
+  background: -moz-linear-gradient(top,#f22 0,#e11 100%);
+  background: -ms-linear-gradient(top,#f22 0,#e11 100%);
+  background: -o-linear-gradient(top,#f22 0,#e11 100%);
+  background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#f22),color-stop(100%,#e11));
+  background: -webkit-linear-gradient(top,#f22 0,#e11 100%);
+  background: linear-gradient(to bottom,#f22 0,#e11 100%);
   /* background: #2289f5; */
 }
 
@@ -749,6 +755,7 @@ div.column.centered.load-more {
   padding: 8px;
   overflow: hidden;
   background: #efeff1;
+  opacity: 0.75;
 }
 
 .video:hover div.rollover {
