--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -669,6 +669,7 @@ abbr { text-transform: none; }
   -ms-box-shadow: inset 0 0 1px white;
   -webkit-box-shadow: inset 0 0 1px white;
   box-shadow: inset 0 0 1px white;
+  display: block;
 }
 
 .header-button a {
