update header language menu

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -135,6 +135,7 @@ a.header-menu-item:hover {
 
 .header-menu-item .language.english {
   background-image: url(images/uk.png);
+  display: none;
 }
 
 .header-menu-item .language.indonesian {
