fix footer about us listing

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -331,6 +331,7 @@ div.row.footer + div.row.footer {
 
 #lower-container .columns ul li {
   margin-bottom: 1em;
+  display: block;
 }
 
   /* Newsletter */
