--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -7,7 +7,7 @@ html { font-size: 62.5%; }
 body { 
   background: white; 
   /*font-family: "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif; */
-  font-family: "Arimo", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: "Arimo", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif !important;
   font-size: 14px; 
   font-size: 1.4rem; 
   line-height: 1.30; 
@@ -446,12 +446,12 @@ aside p { font-size: 13px; line-height: 1.35; font-style: italic; }
 h1, h2, h3, h4, h5, h6 { text-rendering: optimizeLegibility; line-height: 1.1; margin-bottom: 14px; margin-top: 14px; }
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small { font-size: 60%; color: #888; line-height: 0; }
 
-h1 { font-size: 48px; }
-h2 { font-size: 34px; }
-h3 { font-size: 24px; }
-h4 { font-size: 14px; line-height: 1.30; }
-h5 { font-size: 14px; line-height: 1.30; }
-h6 { font-size: 14px; font-weight: normal; }
+body h1 { font-size: 48px; }
+body h2 { font-size: 34px; }
+body h3 { font-size: 24px; }
+body h4 { font-size: 14px; line-height: 1.30; }
+body h5 { font-size: 14px; line-height: 1.30; }
+body h6 { font-size: 14px; font-weight: normal; }
 
 hr { border: solid #ddd; border-width: 1px 0 0; clear: both; margin: 22px 0 21px; height: 0; }
 
@@ -528,6 +528,7 @@ div.column-title h4, div.row-title h4 {
   margin: 0;
   padding: 8px 10px;
   float: left;
+  font-size: 16px;
 }
 
 /* Titles w/ Icons ------------------------ */
@@ -535,7 +536,7 @@ div.column-title h4, div.row-title h4 {
 div.column-title .column-title-icon {
   float: left;
   width: 14px;
-  height: 34px;
+  height: 36px;
   background: #f54422;
   background: -moz-linear-gradient(top,#f22 0,#e11 100%);
   background: -ms-linear-gradient(top,#f22 0,#e11 100%);
@@ -1202,3 +1203,15 @@ div.searchSection, input.searchButton {
     font-size: 26px;
 }
 
+div#LSResult {
+    z-index:1;
+    margin-top: -25px;
+    margin-right: 8px;
+    background-color: transparent !important;
+}
+
+div.LSShadow fieldset{
+    background-color: white;
+}
+
+div.unisubs-videoTab a span.unisubs-tabTextShare { display: none !important; }
