--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -28,7 +28,7 @@ input:focus {
 
 #upper-container {
   border-bottom: 2px solid #aaa;
-  background: url(images/waves.png) center top repeat-x;
+  background: url(images/bg3.jpg) left top repeat-x;
   -moz-box-shadow: inset 0 -2px 4px rgba(0,0,0,0.18);
   -ms-box-shadow: inset 0 -2px 4px rgba(0,0,0,0.18);
   -webkit-box-shadow: inset 0 -2px 4px rgba(0,0,0,0.18);
@@ -36,11 +36,11 @@ input:focus {
 }
 
 #upper-container div.row.header {
-  -moz-box-shadow: 0 2px 5px rgba(0,0,0,0.22);
-  -ms-box-shadow: 0 2px 5px rgba(0,0,0,0.22);
-  -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.22);
-  box-shadow: 0 2px 5px rgba(0,0,0,0.22);
-  background: rgba(248,248,248,0.96);
+  -moz-box-shadow: 0 2px 5px rgba(0,0,0,0.28);
+  -ms-box-shadow: 0 2px 5px rgba(0,0,0,0.28);
+  -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.28);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.28);
+  background: rgba(248,248,254,0.86);
 }
 
 div.row.header, div.twelve.columns.header {
